<resources>
    <string name="app_name">LearningToLive</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="spain">Spain</string>
    <string name="ireland">Ireland</string>
    <string name="slovenia">Slovenia</string>
    <string name="finland">Finland</string>
    <string name="daily_life">Daily Life</string>
    <string name="health_button">Health and Well-Being</string>
    <string name="settling_button">Settling In</string>
    <string name="migrant_button">Migrant Status</string>
    <string name="language_button">Language and Study</string>
    <string-array name="daily_life_headings">
        <item name="life_housing">Housing and Accommodation</item>
        <item name="life_food">Food and Home</item>
        <item name="life_eating">Eating Out</item>
        <item name="life_money">Money and Banking</item>
        <item name="life_family">Family Support and Childcare</item>
        <item name="life_travel">Travel to Campus</item>
        <item name="life_hospitals">Hospitals and Pharmacies</item>
        <item name="life_local">Local Area</item>
    </string-array>
    <string-array name="daily_life_references">
        <item name="life_housing">life_housing</item>
        <item name="life_food">life_food</item>
        <item name="life_eating">life_eating</item>
        <item name="life_money">life_money</item>
        <item name="life_family">life_family</item>
        <item name="life_travel">life_travel</item>
        <item name="life_hospitals">life_hospitals</item>
        <item name="life_local">life_local</item>
    </string-array>
</resources>